@@ -5,6 +5,10 @@ plugins {
 
 description = "Source for JavaCompile, JavaExec and Javadoc tasks, it also contains logic for incremental Java compilation"
 
+gradlebuildJava {
+    usesJdkInternals = true
+}
+
 errorprone {
     disabledChecks.addAll(
         "CheckReturnValue", // 2 occurrences
@@ -13,7 +17,6 @@ errorprone {
         "InvalidInlineTag", // 3 occurrences
         "MissingCasesInEnumSwitch", // 1 occurrences
         "MixedMutabilityReturnType", // 3 occurrences
-        "OperatorPrecedence", // 2 occurrences
     )
 }
 
@@ -28,6 +31,7 @@ dependencies {
     api(projects.coreApi)
     api(projects.dependencyManagement)
     api(projects.fileCollections)
+    api(projects.fileOperations)
     api(projects.files)
     api(projects.hashing)
     api(projects.languageJvm)
@@ -55,9 +59,13 @@ dependencies {
     implementation(projects.serviceLookup)
     implementation(projects.time)
     implementation(projects.fileTemp)
+    implementation(projects.jvmServices)
+    implementation(projects.logging)
     implementation(projects.loggingApi)
+    implementation(projects.logging)
     implementation(projects.modelCore)
     implementation(projects.toolingApi)
+    implementation(projects.problemsRendering)
 
     api(libs.slf4jApi)
     implementation(libs.commonsLang)
@@ -105,12 +113,6 @@ tasks.withType<Test>().configureEach {
     }
 }
 
-tasks.withType<JavaCompile>().configureEach {
-    options.release = null
-    sourceCompatibility = "8"
-    targetCompatibility = "8"
-}
-
 strictCompile {
     ignoreDeprecations() // this project currently uses many deprecated part from 'platform-jvm'
 }
@@ -122,3 +124,19 @@ packageCycles {
 }
 
 integTest.usesJavadocCodeSnippets = true
+
+tasks.javadoc {
+    // This project accesses JDK internals.
+    // We would ideally add --add-exports flags for the required packages, however
+    // due to limitations in the javadoc modeling API, we cannot specify multiple
+    // flags for the same key.
+    // Instead, we disable failure on javadoc errors.
+    isFailOnError = false
+    options {
+        this as StandardJavadocDocletOptions
+        addBooleanOption("quiet", true)
+    }
+}
+tasks.isolatedProjectsIntegTest {
+    enabled = false
+}
